k8s/network/http-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: practica
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: service.valande.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-microservice
            port:
              number: 5000
